# listpatron

./: AUTHORS  ChangeLog  Makefile  Makefile.am  README  ROADMAP  TODO  configure.in  reconf.sh
pixmaps/icons/: Makefile.am
raw/: listpatron_splash.xcf  lp_ico_col_insdel.xcf  lp_ico_row_insdel.xcf
src/: Makefile.am  debug.c  debug.h  libgtkext.c  libgtkext.h  libxmlext.c  libxmlext.h  list.c  list.h  listpatron.c  listpatron.h  menu_def.h  splash.h  stock.c  stock.h  ui_export.c  ui_export.h  ui_filter.c  ui_filter.h  ui_find.c  ui_find.h  ui_import.c  ui_import.h  ui_rulelist.c  ui_rulelist.h  ui_sort.c  ui_sort.h
testdata/: Boeken-corrupt.lip  Boeken-ext.lip  Boeken.csv  Boeken.lip  Boeken.tsv  Makefile.am
xml/: Makefile.am  listpatron.dtd
