EXTRA_DIST = listpatron-col-add.png \
             listpatron-col-del.png \
			 listpatron-row-add.png \
			 listpatron-row-del.png

listpatronicondir = $(datadir)/pixmaps/listpatron/icons
listpatronicon_DATA = listpatron-col-add.png listpatron-col-del.png listpatron-row-add.png listpatron-row-del.png

